--- a/04-HTML-CSS/final/index.html
+++ b/04-HTML-CSS/final/index.html
@@ -18,13 +18,11 @@
     </p>
 
     <h2>Another heading</h2>
-    <p class="second">
-      Just another paragraph
-    </p>
+    <p class="second">Just another paragraph</p>
 
     <img
       id="course-image"
-      src="https://img-a.udemycdn.com/course/480x270/437398_46c3_9.jpg"
+      src="https://img-c.udemycdn.com/course/240x135/437398_46c3_10.jpg"
     />
 
     <form id="your-name">
